queue with array added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div style="display: flex; height: 100vh; width:100vw; ">
+
+      <video id="video_player_html5_api" class="vjs-tech" style="height: 500px;width:500px "  src="https://do365ki.dood.video/u5kj3wlbqlh3sdgge4uhopyccdlfvkyxsbxzleaudz6pe53vystdhk2s7dwq/x545l786jy~HPorh4dzNO?token=s054tb3xpozj3pxbl2ppcgh5&amp;expiry=1667572167501" width="100" height="100" controls=""> </video>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
